fixed the layout of ad section and deals section, made the deal card clickable, removed header top, aligned the search bar

--- a/src/components/layout/show-card-home/show-card.css
+++ b/src/components/layout/show-card-home/show-card.css
@@ -1,8 +1,8 @@
 .show-card {
   position: relative;
-  width: 30%;
+  width: auto;
   display: flex;
-  height: 40vh;
+  height: auto;
 }
 
 .image {
@@ -11,7 +11,7 @@
   border-radius: 4px;
 }
 img {
-  padding-left: 0%;
+  padding-left: 0;
 }
 
 .caption {
